# GLCraft

./: .gitignore  CMakeLists.txt  main.cpp
Application/: Application.cpp  Application.h  Context.cpp  Context.h
Camera/: Camera.cpp  Camera.h  Movement.h  Ray.cpp  Ray.h
Maths/: ABAB.h  InterpolationMaths.cpp  InterpolationMaths.h  ViewFrustum.cpp  ViewFrustum.h
Model/: Block.cpp  Block.h  Model.h
Model/Block/: Block.cpp
Model/Chunk/: AdjacentBlockPositions.h  AdjacentChunkPositions.h  Chunk.cpp  Chunk.h  ChunkBlock.cpp  ChunkBlock.h  ChunkBlockData.cpp  ChunkBlockData.h  ChunkBlockType.h  ChunkGenerator.cpp  ChunkGenerator.h  Face.h  FaceIndices.h
NoiseGenerator/: NoiseGenerator.cpp  NoiseGenerator.h
Player/: Inventory.cpp  Inventory.h  Player.cpp  Player.h
Renderer/: AbstractObjectRenderer.h  ChunkRenderer.cpp  ChunkRenderer.h  CubeRenderer.cpp  CubeRenderer.h  Renderer.cpp  Renderer.h
Renderer/Chunk/: ChunkRenderer.cpp  ChunkRenderer.h
Renderer/Cube/: CubeRenderer.cpp  CubeRenderer.h
Renderer/ImGuiRenderer/: ImGuiRenderer.cpp  ImGuiRenderer.h
Renderer/Skybox/: SkyboxRenderer.cpp  SkyboxRenderer.h
Renderer/UIRenderer/: UIRenderer.cpp  UIRenderer.h
Shader/: Shader.hpp
State/: State.cpp  State.h  StateAbstract.h  StatePlaying.cpp  StatePlaying.h
Text/: Character.h  CharacterSet.cpp  CharacterSet.h  Parser.cpp  Parser.h
Texture/: BasicTexture.cpp  BasicTexture.h  CubeMap.cpp  CubeMap.h  SkyboxTexture.cpp  SkyboxTexture.h  TextureAbstract.h  TextureAtlas.cpp  TextureAtlas.h
Util/: NonMovable.h  Random.cpp  Random.h  Singleton.h
World/: World.cpp  World.h
World/Generation/Biome/: Biome.cpp  Biome.h  DesertBiome.cpp  DesertBiome.h  ForestBiome.cpp  ForestBiome.h  GrassLandBiome.cpp  GrassLandBiome.h  OceanBiome.cpp  OceanBiome.h
World/Generation/Terrain/: TerrainGenerator.cpp  TerrainGenerator.h
World/Generation/Tree/: TreeGenerator.cpp  TreeGenerator.h
oldCodeNotes/: smoothTerrainBugged.txt
old_code_notes/: main_old.txt
shaders/: texturedFragmentShader.frag  texturedVertexShader.vert  uiVertexShader.vert
