cmake_minimum_required(VERSION 3.24)
project(GLCraft)

set(CMAKE_CXX_STANDARD 17)
include_directories(src include/glad include/stb_image include/glm Shader Application Camera State Renderer Model Texture)

set(SOURCE_FILES
        include/glad/glad.c
        main.cpp Camera/Camera.cpp
        Application/Context.cpp

        Application/Application.cpp
        Renderer/Renderer.cpp
        State/StatePlaying.cpp
        Renderer/CubeRenderer.cpp
        Renderer/ChunkRenderer.cpp
        Model/Block.cpp
        Texture/BasicTexture.cpp
        Camera/Movement.h)


add_executable(GLCraft ${SOURCE_FILES} Application/Context.cpp Application/Context.h)

target_link_libraries(GLCraft glfw3 wayland-client m GL GLU)
